Minor refactorings to make sonar happy
* Use a private constructor to make it clear, that the loader is a utility class
* Use generics when possible (an exception might be thrown, but will be catched as before)
* Extract inner try block to a private method to reduce complexity
* Use Class#getDeclaredConstructor() to get the default constructor, instead of using
  the deprecated (as of Java 9) Class#newInstance() directly
* Add two tests (an empty "classname" and a valid classname, that is not a Provider)
* Add serialVersionUIDs to the dummy classes